00_pi/masq/iptables.rules
*nat
#Originally from http://www.intellamech.com/RaspberryPi-projects/rpi_iptables.html#4

# Allow Access Point NAT
-A POSTROUTING -o wlan0 -j MASQUERADE

#Route OBIHAI
#-A PREROUTING -i wlan0 -p tcp --dport 80 -j DNAT --to-destination 192.168.2.3

COMMIT

*filter

# Allows all loopback (lo0) traffic and drop all traffic to 127/8 that
# doesn't use lo0
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.0/8 -j REJECT

# Accepts all established inbound connections
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Allows all outbound traffic
# You could modify this to only allow certain traffic
-A OUTPUT -j ACCEPT

# Allows SSH connections
# The --dport number is the same as in /etc/ssh/sshd_config
-A INPUT -p tcp -m state --state NEW --dport 22 -j ACCEPT

# Limit SSH abuse
# The first rule records the IP address of each new attempt to access
# port 22 using the recent module. The second rule checks to see if that
# IP address has attempted to connect 4 or more times within the last
# 60 seconds, and if not then the packet is accepted.
-A INPUT -p tcp -m state --state NEW -m recent --dport 22 --set --name ssh --rsource
-A INPUT -p tcp -m state --state NEW -m recent --dport 22 ! --rcheck --seconds 60 --hitcount 4 --name ssh --rsource -j ACCEPT

# Allows vncserver connections. Uncomment this to allow VNC. Again, this is
# best restricted to certain IPs
-A INPUT -p tcp -m state --state NEW --dport 5900:5901 -j ACCEPT

# Allow ping
# note that blocking other types of icmp packets is considered a bad idea
# by some
#  remove -m icmp --icmp-type 8 from this line to allow all kinds of icmp:
#  https://security.stackexchange.com/questions/22711
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

#ObiTalk
#https://www.obitalk.com/info/faq/Troubleshooting-sec/ports-to-keep-open-on-my-router
#TCP Ports: 6800, 5222, 5223
#UDP Ports: 5060, 5061, 10000 to 11000, 16600 to 16998, 19305
#Allow Incoming on UDP Port: 10000
#-A INPUT -p tcp -m state --state NEW --dport 10000 -j ACCEPT
#-A INPUT -p tcp -m state --state NEW --dport 19302:19309 -j ACCEPT
#ObiHAI
#-A FORWARD -d 192.168.2.3 -p tcp --dport 80 -j ACCEPT

# Allow forwarded from eth0 to permit NAT and Core Pi
-A FORWARD -i wlan0 -o eth0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth0 -o wlan0 -j ACCEPT

# Allow all from intranet
-A INPUT -i eth0 -j ACCEPT

# log iptables denied calls (access via 'dmesg' command)
#-A INPUT -m limit --limit 5/min -j LOG --log-prefix "iptables denied: " --log-level 7

# Reject all other inbound - default deny unless explicitly allowed policy:
-A INPUT -j DROP
-A FORWARD -j DROP

COMMIT
